Add `cpu_intensive` electron benchmark

--- a/apps/hello_world/src/index.html
+++ b/apps/hello_world/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <h1>Hello World!</h1>
+    <p>Electron application for Tauri Benchmark's.</p>
   </body>
 </html>
