add license and acknowledgement

--- a/apps/cpu_intensive/src/index.html
+++ b/apps/cpu_intensive/src/index.html
@@ -1,3 +1,7 @@
+<!--
+  @author molant <https://github.com/molant>
+  https://github.com/crossplatform-dev/xplat-challenges/blob/main/cpu/electron/src/index.html
+-->
 <!DOCTYPE html>
 <html>
   <head>
